@@ -17,6 +17,8 @@ Version 0.7.2 UNRELEASED
     "Quit confirmation" with 'Escape' or 'Ctrl-g' does not cause the
     dialog/prompt to stop working (Closes: #607118)
 
+  * [cmdline] Warn when package cannot be marked/unmarked auto (Closes: #498240)
+
 
 [2015-09-06]
 Version 0.7.1
